@trivial Fixed alignment error

--- a/source/less/components/toggle.less
+++ b/source/less/components/toggle.less
@@ -110,7 +110,7 @@
 
       + span + span {
         color: @switch-text-color;
-        margin-left: -4*@px; // Remove whitespace between-inline block elements
+        margin-left: -0.75rem; // Remove whitespace between-inline block elements
         &:before {
           position: relative;
           left: -28*@px;
